# interact-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
AddOn/Interact/: Bindings.xml  Interact.lua  Interact.toc
src/: errors.rs  game.rs  hooks.rs  lib.rs  logging.rs  lua.rs  offsets.rs  scripts.rs
