[package]
name = "interact"
version = "1.0.0"
edition = "2021"
authors = ["interact contributors"]
description = "Interact with nearest object keybind for World of Warcraft 1.12.1.5875 - Rust port"
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
] }

# Function hooking
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }

# Thread-safe primitives
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
