[package]
name = "interact"
version = "1.2.0"
edition = "2021"
authors = ["interact contributors"]
description = "Interact with nearest object keybind for World of Warcraft 1.12.1.5875 - Rust port"
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
] }

# Function hooking
# Note: Using alpha version - monitor for updates/breaking changes
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }

# Thread-safe primitives
once_cell = "1.19"

# Error handling
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Remove symbols for smaller binary

[profile.dev]
panic = "abort"
